--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,22 @@
     package="com.example.lab_a1_a2_android_ritraj_812652">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab_A1_A2_android_Ritraj_812652">
+        <activity
+            android:name=".Activities.AddProviderActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.ShowAllProductsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.AddProductActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
